# skyway_for_ros

./: .gitmodules  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugins.xml  skyway_plugin.xml
.github/workflows/: release_library.yml
config/: test.yaml
doc/: event_request.md  peer_create.md  peer_status.md
doc/img/: component.xml
include/skyway/: binary_loopback.h  json_loopback.h  skyway_plugin.h  skyway_plugin.hpp  string_loopback.h  string_pub_sub.h  string_send_recv.h
rust_module/: Cargo.toml
rust_module/src/: c_module.rs  di.rs  error.rs  ffi.rs  lib.rs  utils.rs
rust_module/src/application/: dto.rs  factory.rs  mod.rs
rust_module/src/application/dto/: mod.rs  request.rs  response.rs
rust_module/src/application/usecase/: create_peer.rs  delete_peer.rs  event.rs  mod.rs
rust_module/src/application/usecase/data/: connect.rs  create.rs  mod.rs  redirect.rs
rust_module/src/application/usecase/event/: data.rs  media.rs  mod.rs  peer.rs
rust_module/src/application/usecase/general/: service.rs
rust_module/src/application/usecase/media/: answer.rs  call.rs  mod.rs
rust_module/src/application/usecase/peer/: create.rs  general.rs  mod.rs
rust_module/src/domain/: entity.rs  repository.rs
rust_module/src/domain/entity/: mod.rs  request.rs  response.rs
rust_module/src/ffi/: c_to_rust_bridge.rs
rust_module/src/ffi/rust_to_c_bridge/: c_functions_wrapper.rs  state_objects.rs
rust_module/src/infra/: mod.rs
src/: calc.cpp  calc.h  di.cpp  ffi.cpp  ffi.h  ffi_bridge.cpp  ffi_bridge.h  main.cpp  router.cpp  router.h  skyway.cpp  skyway_node.cpp
src/domain/: entity.cpp  entity.h
src/ffi/: callback_from_rust.cpp  callback_from_rust.h  common.h  ros_functions.cpp  ros_functions.h  rust_functions.h
src/infra/: destination_impl.cpp  destination_impl.h  source_impl.cpp  source_impl.h
src/plugin/: binary_plugin_router.cpp  binary_plugin_router.h  json_plugin_router.cpp  json_plugin_router.h  plugin_factory.cpp  plugin_factory.h  plugin_router.h  plugin_router_factory.cpp  plugin_router_factory.h  skyway_plugin.cpp  string_plugin_router.cpp  string_plugin_router.h
src/plugin/samples/: string_send_recv.cpp
src/plugin_ros2/: skyway_plugin.cpp
src/plugin_ros2/samples/: binary_loopback.cpp  json_loopback.cpp  string_loopback.cpp
src/plugin_router/: binary_plugin_router.cpp  json_plugin_router.cpp  json_plugin_router.h  string_plugin_router.cpp
src/presentation/: control_service.cpp  events_observe_action.cpp  events_observe_action.h  events_service.cpp
src/ros2/: control_service.cpp  control_service.h  events_service.cpp  events_service.h
src/socket/: udp_socket.cpp  udp_socket.h
test/: unit_test.test
test/domain/: entity_test.cpp
test/infra/: destination_impl_test.cpp  source_impl_test.cpp  source_impl_test.h
test/plugin/: binary_plugin_router_test.cpp  json_plugin_router_test.cpp  plugin_factory_test.cpp  plugin_router_factory_test.cpp  string_plugin_router_test.cpp
test/plugin_router/: binary_plugin_router_test.cpp  json_plugin_router_test.cpp  string_plugin_router_test.cpp
test/socket/: udp_socket_test.cpp
test/stub/: destination_stub.cpp  destination_stub.h  source_stub.cpp  source_stub.h
