<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skyway</name>
  <version>0.0.1</version>
  <description>Package for using SkyWay from ROS</description>
  <maintainer email="t.nakakura@ntt.com">Nakakura</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/ntt-t3/skyway_for_ros</url>
  <author email="t.nakakura@ntt.com">Toshiya Nakakura</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
