[package]
name = "rust_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
futures = "0.3.12"
module = { path = "skyway_webrtc_gateway_caller" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
shaku = "*"
tokio = { version = "1.17.0", features = ["full"] }

[dev-dependencies]
mockall = "0.9.1"
