[package]
name = "rust_module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]
name = "skyway"
path = "src/lib.rs"

[dependencies]
async-trait = "*"
futures = "0.3.12"
skyway-webrtc-gateway-caller = { path = "skyway_webrtc_gateway_caller" }
once_cell = "*"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
shaku = "*"
tokio = { version = "1.17.0", features = ["full"] }

[dev-dependencies]
mockall = "0.9.1"
